disable UseCompactObjectHeaders in JVM arguments (#763)
* disable UseCompactObjectHeaders in JVM arguments

* disable UseCompactObjectHeaders in JVM arguments - profile java 25+